--- a/hvip-company-web/src/main/webapp/WEB-INF/web.xml
+++ b/hvip-company-web/src/main/webapp/WEB-INF/web.xml
@@ -65,43 +65,17 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <!--<servlet>-->
+        <!--<servlet-name>dispatcher</servlet-name>-->
+        <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
 
-    <filter>
-        <filter-name>DruidWebStatFilter</filter-name>
-        <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
-        <init-param>
-            <param-name>exclusions</param-name>
-            <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
-        </init-param>
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>dispatcher</servlet-name>-->
+        <!--<url-pattern>/app/*</url-pattern>-->
+    <!--</servlet-mapping>-->
 
-    </filter>
-    <filter-mapping>
-        <filter-name>DruidWebStatFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <servlet>
-        <servlet-name>DruidStatView</servlet-name>
-        <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
-        <init-param>
-            <!-- 不允许清空统计数据 -->
-            <param-name>resetEnable</param-name>
-            <param-value>false</param-value>
-        </init-param>
-        <init-param>
-            <!-- 用户名 -->
-            <param-name>loginUsername</param-name>
-            <param-value>cjiaclean</param-value>
-        </init-param>
-        <init-param>
-            <!-- 密码 -->
-            <param-name>loginPassword</param-name>
-            <param-value>root</param-value>
-        </init-param>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DruidStatView</servlet-name>
-        <url-pattern>/druid/*</url-pattern>
-    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
